# SMB-Client

./: .gitignore  Cargo.toml  README.md
apps/macos/RYNATClient/: AppDelegate.swift  DesignSystem.swift  DropContainerView.swift  FileListController.swift  Info.plist  LocalRedirectServer.swift  LoginViewController.swift  MacPreviewService.swift  PreviewCoordinator.swift  RynatCore.swift  RynatTableRowView.swift  ServerSettingsDialog.swift  SidebarView.swift  SmbGateway.swift  ThemeManager.swift  ToastPresenter.swift  TransferCoordinator.swift  WorkspaceController+AppActions.swift  WorkspaceController+Commands.swift  WorkspaceController+Helpers.swift  WorkspaceController+Layout.swift  WorkspaceController+Links.swift  WorkspaceController+Navigation.swift  WorkspaceController.swift  (+6 more)
apps/windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  Rynat.WindowsClient.csproj  app.manifest
apps/windows-context-helper/: Cargo.toml  Program.cs  Rynat.WindowsContextHelper.csproj
apps/windows-shell/: README.md  index.html  package.json
apps/windows-shell-lite/: Cargo.toml
apps/windows-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-shell/src-tauri/src/: lib.rs  main.rs
apps/windows-tray/: Program.cs  Rynat.WindowsTray.csproj
apps/windows-winui-legacy/: MainWindow.xaml  MainWindow.xaml.cs  README-LEGACY.md  Rynat.WindowsClient.csproj  RynatCoreBridge.cs  app.manifest
crates/rynat-core/: Cargo.toml
crates/rynat-core/src/: bridge.rs  credential.rs  error.rs  lib.rs  link.rs  preview.rs  redirect_page.rs  server.rs  session.rs  smb_client.rs  storage.rs  transfer.rs
crates/rynat-windows-shell-support/: Cargo.toml
docs/: explorer-first-windows-client.md  macos-architecture-evolution-plan.md  windows-architecture-direction.md  windows-code-review-2026-06-20.md  windows-wpf-review-2026-06.md
include/: rynat_core.h
scripts/: build-macos-client.sh  build-windows-core.ps1  check-bridge-surface.ps1  check-bridge-surface.sh  ffi-smoke-test-windows.ps1  ffi-smoke-test.sh  pull-build-run-windows.bat  pull-build-run-windows.ps1  windows-app-service-smoke.ps1  windows-app-service-smoke.sh
scripts/windows-shell/: build-check.ps1  build-release.bat  build-release.ps1  diagnose-rust-msvc.ps1  pull-build-check.bat  pull-build-check.ps1  write-registration-preview.ps1
scripts/windows-tray/: build-check.bat  build-check.ps1  build-installer.bat  build-installer.ps1  build-release.bat  build-release.ps1  installer.iss
tools/ffi-smoke-test/: README.md
tools/redirect-page/: README.md  index.html
(+215 files in other folders)
