[package]
name = "rynat-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
aes-gcm = "0.11.0-rc.3"
chrono.workspace = true
getrandom = "0.4"
hmac = "0.13"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
smb2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
