[package]
name = "rynat-windows-shell"
version = "0.1.0"
description = "RYNAT Explorer-first Windows shell"
edition = "2024"

[workspace]

[profile.release]
opt-level = 0
lto = false
codegen-units = 16

[lib]
name = "rynat_windows_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rynat-windows-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rynat-core = { path = "../../../crates/rynat-core" }
rynat-windows-shell-support = { path = "../../../crates/rynat-windows-shell-support" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
